general endpoint workflow stubs
