# internal/data/dtos/passwords.go
@@ -6,5 +6,5 @@ type PasswordResetRequest struct {
 
 type PasswordReset struct {
 	Token    string `json:"token"         validate:"required"`
-	Password string `json:"new_password1" validate:"required,min=8"`
+	Password string `json:"password" validate:"required,min=8"`
 }
